<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_wallpaper_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_popular"
            android:title="@string/menu_popular" />
        <item
            android:id="@+id/nav_random"
            android:icon="@drawable/ic_random"
            android:title="@string/menu_random" />
        <item
            android:id="@+id/nav_liked"
            android:icon="@drawable/ic_liked"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_wallpaper_info"
            android:title="@string/menu_info" />


    </group>

</menu>