<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newhdwallpaper.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_liked"
        android:name="com.example.newhdwallpaper.ui.gallery.GalleryFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.newhdwallpaper.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_popular"
        android:name="com.example.newhdwallpaper.ui.popular.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" />
    <fragment
        android:id="@+id/nav_random"
        android:name="com.example.newhdwallpaper.ui.random.RandomFragment"
        android:label="@string/menu_random"
        tools:layout="@layout/fragment_random" />
    <fragment
        android:id="@+id/innerRvFragment"
        android:name="com.example.newhdwallpaper.fragments.InnerRvFragment"
        android:label="fragment_inner_rv"
        tools:layout="@layout/fragment_inner_rv" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.newhdwallpaper.MainActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
    <fragment
        android:id="@+id/oneImageFragment"
        android:name="com.example.newhdwallpaper.fragments.OneImageFragment"
        android:label="fragment_one_image"
        tools:layout="@layout/fragment_one_image" />
    <fragment
        android:id="@+id/setFragment"
        android:name="com.example.newhdwallpaper.fragments.SetFragment"
        android:label="fragment_set"
        tools:layout="@layout/fragment_set" />

</navigation>